# c-avr-template

./: .gitignore  CMakeLists.txt  README.md  create_new_module.sh
simulide/: projectname.sim1
src/hello_world/: CMakeLists.txt
src/hello_world/include/projectname/hello_world/: hello_world.h
src/hello_world/src/: hello_world.c
src/main/: CMakeLists.txt
src/main/src/: main.c
templates/template_app_module/: CMakeLists.txt
templates/template_lib_module/: CMakeLists.txt
